# newsletter_engine

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yml  sqlx-data.json
.github/workflows/: ci.yml
config/: local.yml  production.yml
migrations/: 20220314170729_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  run.rs
src/routes/: subscribe.rs
tests/: integration.rs
