[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.0"
config = "0.12.0"
serde = { version = "1.0", features = ["derive"]}

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2.7"
reqwest = "0.11"
tokio = "1.17"
