[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.0"
chrono = "0.4"
config = "0.12"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"]}
sqlx = { version = "0.5.11", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]}
tracing = { version = "0.1", features = ["log"]}
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
uuid = { version = "0.8", features = ["v4"]}

[dev-dependencies]
actix-rt = "2.7"
reqwest = "0.11"
tokio = "1.17"
